Update to latest verison
Includes all new weapons up to ZRG 20mm

--- a/App.config
+++ b/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ColdWarCamo.Reticles" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="ColdWarCamo.AssaultRifles" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="ColdWarCamo.SubmachineGuns" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="ColdWarCamo.TacticalRifles" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
@@ -18,6 +19,101 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <userSettings>
+        <ColdWarCamo.Reticles>
+            <setting name="Last" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="MILLSTOPREFLEX_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="MILLSTOPREFLEX_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="VISIONTECH2X_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="VISIONTECH2X_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="KOBRAREDDOT_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="KOBRAREDDOT_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="QUICKDOTLED_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="QUICKDOTLED_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="AXIALARMS3X_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="AXIALARMS3X_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="SILLIXHOLOSCOUT_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="SILLIXHOLOSCOUT_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="MICROFLEXLED_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="MICROFLEXLED_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="HAWKSMOOR_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="HAWKSMOOR_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="ROYALKROSS4X_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="ROYALKROSS4X_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="SUSATMULTIZOOM_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="SUSATMULTIZOOM_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="DIAMONDBACKREFLEX_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="DIAMONDBACKREFLEX_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="SNAPPOINT_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="SNAPPOINT_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="FASTPOINTREFLEX_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="FASTPOINTREFLEX_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="HANGMANRF_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="HANGMANRF_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="OTEROMINIREFLEX_MP" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+            <setting name="OTEROMINIREFLEX_ZM" serializeAs="String">
+                <value>0|0000000000</value>
+            </setting>
+        </ColdWarCamo.Reticles>
         <ColdWarCamo.AssaultRifles>
             <setting name="Last" serializeAs="String">
                 <value>-1</value>
@@ -95,6 +191,36 @@
                 <value>0,0,0,0,0,0,0</value>
             </setting>
             <setting name="FFAR1_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="GROZA_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="GROZA_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="GROZA_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="GROZA_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="GROZA_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="FARA83_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="FARA83_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="FARA83_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="FARA83_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="FARA83_STATS_ZM" serializeAs="String">
                 <value>0,0,0,0,0,0,0</value>
             </setting>
         </ColdWarCamo.AssaultRifles>
@@ -175,6 +301,36 @@
                 <value>0,0,0,0,0,0,0</value>
             </setting>
             <setting name="BULLFROG_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="MAC10_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="MAC10_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="MAC10_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="MAC10_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="MAC10_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="LC10_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="LC10_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="LC10_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="LC10_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="LC10_STATS_ZM" serializeAs="String">
                 <value>0,0,0,0,0,0,0</value>
             </setting>
         </ColdWarCamo.SubmachineGuns>
@@ -342,6 +498,21 @@
             <setting name="M82_STATS_ZM" serializeAs="String">
                 <value>0,0,0,0,0,0,0</value>
             </setting>
+            <setting name="ZRG20MM_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="ZRG20MM_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="ZRG20MM_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="ZRG20MM_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="ZRG20MM_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
         </ColdWarCamo.SniperRifles>
         <ColdWarCamo.Pistols>
             <setting name="Last" serializeAs="String">
@@ -427,6 +598,21 @@
             <setting name="GALLOSA12_STATS_ZM" serializeAs="String">
                 <value>0,0,0,0,0,0,0</value>
             </setting>
+            <setting name="STREETSWEEPER_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="STREETSWEEPER_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="STREETSWEEPER_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="STREETSWEEPER_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="STREETSWEEPER_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
         </ColdWarCamo.Shotguns>
         <ColdWarCamo.RocketLaunchers>
             <setting name="Last" serializeAs="String">
@@ -495,6 +681,81 @@
                 <value>0,0,0,0,0,0,0</value>
             </setting>
             <setting name="M79_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="SLEDGEHAMMER_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="SLEDGEHAMMER_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="SLEDGEHAMMER_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="SLEDGEHAMMER_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="SLEDGEHAMMER_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="WAKIZASHI_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="WAKIZASHI_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="WAKIZASHI_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="WAKIZASHI_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="WAKIZASHI_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="MACHETE_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="MACHETE_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="MACHETE_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="MACHETE_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="MACHETE_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="ETOOL_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="ETOOL_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="ETOOL_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="ETOOL_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="ETOOL_STATS_ZM" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="R1SHADOWHUNTER_LEVEL" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="R1SHADOWHUNTER_CAMO_MP" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="R1SHADOWHUNTER_CAMO_ZM" serializeAs="String">
+                <value>00000000000000000000000000000000000000</value>
+            </setting>
+            <setting name="R1SHADOWHUNTER_STATS_MP" serializeAs="String">
+                <value>0,0,0,0,0,0,0</value>
+            </setting>
+            <setting name="R1SHADOWHUNTER_STATS_ZM" serializeAs="String">
                 <value>0,0,0,0,0,0,0</value>
             </setting>
         </ColdWarCamo.Specials>
