--- a/ColdWarCamo.csproj
+++ b/ColdWarCamo.csproj
@@ -49,11 +49,18 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>AssaultRifles.settings</DependentUpon>
     </Compile>
+    <Compile Include="Enums.cs" />
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmReticles.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReticles.Designer.cs">
+      <DependentUpon>frmReticles.cs</DependentUpon>
     </Compile>
     <Compile Include="LightMachineGuns.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -67,6 +74,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reticles.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Reticles.settings</DependentUpon>
+    </Compile>
     <Compile Include="RocketLaunchers.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -100,6 +112,9 @@
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmReticles.resx">
+      <DependentUpon>frmReticles.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -130,6 +145,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Reticles.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Reticles.Designer.cs</LastGenOutput>
+    </None>
     <None Include="RocketLaunchers.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>RocketLaunchers.Designer.cs</LastGenOutput>
